ing/hi-pod-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: main-pod1
  labels:
    app: main
spec:
  containers:
  - name: main-container1
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the Main-page-1"

---

apiVersion: v1
kind: Pod
metadata:
  name: main-pod2
  labels:
    app: main
spec:
  containers:
  - name: main-container2
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the Main-page-2"

---

apiVersion: v1
kind: Pod
metadata:
  name: bookstore-pod1
  labels:
    app: bookstore
spec:
  containers:
  - name: bookstore-container1
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the BOOKSTORE-page-1"

---
apiVersion: v1
kind: Pod
metadata:
  name: bookstore-pod2
  labels:
    app: bookstore
spec:
  containers:
  - name: bookstore-container2
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the BOOKSTORE-page-2"

---

apiVersion: v1
kind: Pod
metadata:
  name: payment-pod1
  labels:
    app: payment
spec:
  containers:
  - name: payment-container1
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the PAYMENT-page-1"

---

apiVersion: v1
kind: Pod
metadata:
  name: payment-pod2
  labels:
    app: payment
spec:
  containers:
  - name: payment-container2
    image: dbgurum/ingress:hi
    args:
    - "-text=this is the PAYMENT-page-2"
    
---

apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  selector:
    app: main
  ports:
  - port: 5678
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-svc
spec:
  selector:
    app: bookstore
  ports:
  - port: 5678
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  selector:
    app: payment
  ports:
  - port: 5678
    protocol: TCP
